RESOLVED FIXED166738
Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::sizeWillChangeAtTime(const MediaTime&, const FloatSize&)::block_invoke
https://bugs.webkit.org/show_bug.cgi?id=166738
Summary Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::sizeWillChangeAtTime(...
Jer Noble
Reported 2017-01-05 12:15:54 PST
Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::sizeWillChangeAtTime(const MediaTime&, const FloatSize&)::block_invoke
Attachments
Patch (2.78 KB, patch)
2017-01-05 12:19 PST, Jer Noble
no flags
Patch (2.78 KB, patch)
2017-01-05 12:45 PST, Jer Noble
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (852.79 KB, application/zip)
2017-01-05 13:26 PST, Build Bot
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (793.92 KB, application/zip)
2017-01-05 13:46 PST, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (1.58 MB, application/zip)
2017-01-05 14:03 PST, Build Bot
no flags
Patch (2.73 KB, patch)
2017-01-05 14:40 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-01-05 12:19:39 PST
Jer Noble
Comment 2 2017-01-05 12:45:26 PST
Jer Noble
Comment 3 2017-01-05 12:46:22 PST
Build Bot
Comment 4 2017-01-05 13:26:43 PST
Comment on attachment 298125 [details] Patch Attachment 298125 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2839869 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-detach.html
Build Bot
Comment 5 2017-01-05 13:26:46 PST
Created attachment 298129 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-01-05 13:46:39 PST
Comment on attachment 298125 [details] Patch Attachment 298125 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2839958 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-v-framesize.html
Build Bot
Comment 7 2017-01-05 13:46:42 PST
Created attachment 298131 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-01-05 14:03:29 PST
Comment on attachment 298125 [details] Patch Attachment 298125 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2839968 New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-config-change-mp4-v-framesize.html
Build Bot
Comment 9 2017-01-05 14:03:32 PST
Created attachment 298132 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Jer Noble
Comment 10 2017-01-05 14:40:09 PST
WebKit Commit Bot
Comment 11 2017-01-06 23:12:59 PST
Comment on attachment 298139 [details] Patch Clearing flags on attachment: 298139 Committed r210473: <http://trac.webkit.org/changeset/210473>
WebKit Commit Bot
Comment 12 2017-01-06 23:13:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.